--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arquivo Histórico</title>
+    <title>Narrativas do Passado</title>
     <link rel="stylesheet" href="inicial.css">
 </head>
 <body>
@@ -13,6 +13,14 @@
             <p class="subtitle">Compartilhando segredos do passado</p>
         </div>
     </header>
+
+<main class="main-container">
+    <section class="content">
+        <h2>Bem-vindo!</h2>
+        <p>Narrativas do Passado, um espaço onde o mistério e a história se encontram. Aqui, mergulhamos nas histórias esquecidas, lendas antigas e segredos do passado, trazendo à tona relatos que merecem ser lembrados. Junte-se a nós nessa jornada no tempo e descubra o que ficou para trás!</p>
+    </section>
+</main>
+
 
     <div class="main-container">
         <nav class="sidebar">
