Fix link case for Contato page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a href="#">Documentos Históricos</a>
             <a href="#">Arqueologia</a>
             <a href="#">Fatos Engraçados</a>
-            <a href="./Contato.html">Contato</a>
+            <a href="./contato.html">Contato</a>
         </nav>
 
         <main class="content">
