--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav class="sidebar">
             <a href="index.html" class="active">Página Inicial</a>
             <a href="#">Povos e Civilizações</a>
-            <a href="#">Guerras</a>
+            <a href="guerras_pagina2.html">Guerras</a>
             <a href="#">Pessoas Historicamente Importantes</a>
             <a href="#">Documentos Históricos</a>
             <a href="#">Arqueologia</a>
@@ -56,6 +56,17 @@
                             </div>
                             <div class="story-image">
                                 <img src="c.png" alt="Campos de Concentração">
+                            </div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="story-content">
+                            <div class="story-text">
+                                <h4><a href="canudos.html" class="story-link">Guerra de Canudos</a></h4>
+                                <p>Conheça o conflito que abalou o sertão baiano no século XIX, onde milhares de sertanejos enfrentaram o exército brasileiro em nome de sua fé e terra.</p>
+                            </div>
+                            <div class="story-image">
+                                <img src="d.png" alt="Canudos">
                             </div>
                         </div>
                     </li>
